--- a/blog.css
+++ b/blog.css
@@ -11,10 +11,13 @@ body {
     background-color: white; 
     padding: 0%;
     margin: 0%;
-    cursor: pointer;
     overflow: hidden;
     z-index: 1;
     box-shadow: 0 4px 4px -4px gray;
+}
+.navbar a:hover {
+    cursor: pointer;
+    color: gray;
 }
 
 nav span {
@@ -32,6 +35,8 @@ nav span {
     margin: 1%;
     font-family: 'Ruda';
     float: right;
+    cursor: pointer;
+
 }
 
 .nav-item a {
@@ -58,6 +63,7 @@ h1, h2, h3, h4, h5, h6{
     
 }
 .post-card{
+    border-radius: 2%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     margin-bottom: 6%;
     padding: 2%;
@@ -69,8 +75,10 @@ h1, h2, h3, h4, h5, h6{
     padding-left: 1%;
 }
 p {
-    line-height: 1.4;
+    line-height: 1.5;
     margin: 0.5%;
+    margin-bottom: 2%;
+    text-indent: 3.5%;
     font-family: 'Quicksand'
 }
 
@@ -88,6 +96,9 @@ p {
 
     float: left;
     width: 200px;
-    margin: 1%;
+    margin-top: 1%;
+    margin-right: 1%;
+    margin-left: 1%;
+
 
 }
